--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "next": "14.2.14",
     "next-themes": "^0.3.0",
     "openai": "^4.67.3",
+    "pnpm": "^10.4.1",
     "react": "^18",
     "react-autolatex": "^2.0.1",
     "react-dom": "^18",
