--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wagner",
+  "name": "jada",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,7 @@
     "@ai-sdk/openai": "^0.0.66",
     "@anthropic-ai/sdk": "^0.33.1",
     "@hookform/resolvers": "^3.9.0",
-    "@pinecone-database/pinecone": "^3.0.3",
+    "@pinecone-database/pinecone": "^5.1.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -50,9 +50,10 @@
     "framer-motion": "^11.11.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.447.0",
+    "motion": "^12.5.0",
     "next": "14.2.14",
     "next-themes": "^0.3.0",
-    "openai": "^4.67.3",
+    "openai": "^4.85.3",
     "pnpm": "^10.4.1",
     "react": "^18",
     "react-autolatex": "^2.0.1",
